--- a/.distignore
+++ b/.distignore
@@ -1,60 +1,16 @@
-/.git
 /.wordpress-org
-.gitignore
-.gitattributes
-.gitmodules
-
-/.idea
+/.git
 /.github
-/.storybook
-
-/bin
-/tests
+/.vscode
 /node_modules
-/assets/src
-/vendor/bin
-/vendor/composer/installers
-/wp-org-assets
+/scripts
+/release
 
-.scrutinizer.yml
-.travis.yml
-.editorconfig
-.babelrc
-.jscrsrc
-.jshintrc
-.eslintignore
-.eslintrc
-.eslintrc.json
-.prettierrc.json
-.prettierignore
-.stylelintrc.json
-.huskyrc.json
-.lintstagedrc.json
 .distignore
-.stylelintignore
+.gitignore
+.svnignore
+.gitattributes
 
-sample-data/wordpress.sql
-sample-data/sample-data.numbers
-bower.json
-codecov.yml
-composer.json
-composer.lock
 package.json
 package-lock.json
-phpcs.xml
-phpunit.xml
-phpunit-with-integration.xml
-phpunit.xml.dist
-plausible-analytics.zip
-CHANGELOG.md
-README.md
 readme.md
-phpcs.ruleset.xml
-phpcs.xml.dist
-CONTRIBUTING.md
-CODE_OF_CONDUCT.md
-contributing.md
-postcss.config.js
-webpack.config.js
-docker-compose.yml
-wp-textdomain.js
