--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,29 @@
-name: Build Plugin Pre-Release
+name: Create WordPress plugin Zip file
 
 on:
   release:
-    types: [ prereleased, released ]
+    types: [ released, prereleased ]
 
 jobs:
   build:
     name: Build Plugin Artifact
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Install composer dependencies
-        uses: php-actions/composer@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          dev: no
+          node-version: 20
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build production assets
+        run: npm run prod
 
       - name: Generate plugin artifact
         run: |
